# failed-cmake

./: README.md
cmake/: CMakeLists.txt
cmake/src/: hello.vala
plain/: Makefile
